--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -540,8 +540,7 @@ li.message .from .destroy_link
     :color #ccc
 
 
-input[type='text'],
-input[type='password'],
+input:not([type='submit']),
 textarea
   :font
     :family 'Arial', 'Helvetica', sans-serif
